--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-text-mask": "^5.4.10",
     "@types/styled-components": "^5.1.15",
     "@unform/core": "^2.1.6",
     "@unform/web": "^2.1.6",
@@ -20,9 +21,11 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-text-mask": "^5.4.3",
     "styled-components": "^5.3.3",
     "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
